--- a/isar2html/theories.conf
+++ b/isar2html/theories.conf
@@ -9,6 +9,7 @@ Partitions_ZF
 func1
 func_ZF
 func_ZF_1
+Cardinal_ZF
 FiniteSeq_ZF
 InductiveSeq_ZF
 Fold_ZF
@@ -51,6 +52,7 @@ Topology_ZF_1b
 Topology_ZF_2
 Topology_ZF_3
 Topology_ZF_4
+Topology_ZF_4a
 Topology_ZF_6
 TopologicalGroup_ZF
 MMI_prelude
