--- a/isar2html/theories.conf
+++ b/isar2html/theories.conf
@@ -54,6 +54,8 @@ Topology_ZF_3
 Topology_ZF_4
 Topology_ZF_4a
 Topology_ZF_6
+Topology_ZF_examples
+UniformSpace_ZF
 TopologicalGroup_ZF
 MMI_prelude
 Metamath_Interface
