changes needed to include TopologicalGroup_Uniformity_ZF in isarmathlib.org

--- a/isar2html/theories.conf
+++ b/isar2html/theories.conf
@@ -57,6 +57,7 @@ Topology_ZF_6
 Topology_ZF_examples
 UniformSpace_ZF
 TopologicalGroup_ZF
+TopologicalGroup_Uniformity_ZF
 MMI_prelude
 Metamath_Interface
 Metamath_Sampler
