edited TopologicalGroup_Uniformity_ZF.thy for isarmathlib.org

--- a/isar2html/theories.conf
+++ b/isar2html/theories.conf
@@ -58,6 +58,7 @@ Topology_ZF_examples
 UniformSpace_ZF
 UniformSpace_ZF_1
 TopologicalGroup_ZF
+TopologicalGroup_Uniformity_ZF
 MMI_prelude
 Metamath_Interface
 Metamath_Sampler
