added subscripts in let expressions support to isar2html

--- a/isar2html/theories.conf
+++ b/isar2html/theories.conf
@@ -56,6 +56,7 @@ Topology_ZF_4
 Topology_ZF_4a
 Topology_ZF_6
 Topology_ZF_examples
+MetricSpace_ZF
 UniformSpace_ZF
 UniformSpace_ZF_1
 TopologicalGroup_ZF
