--- a/isar2html/theories.conf
+++ b/isar2html/theories.conf
@@ -1,69 +1,1 @@
-Introduction
-Fol1
-ZF1
-Nat_ZF_IML
-Finite1
-Finite_ZF_1
-Finite_ZF
-Partitions_ZF
-func1
-func_ZF
-func_ZF_1
-Cardinal_ZF
-FiniteSeq_ZF
-InductiveSeq_ZF
-Fold_ZF
-Order_ZF
-Order_ZF_1
-Order_ZF_1a
-Lattice_ZF
-NatOrder_ZF
-FinOrd_ZF
-EquivClass1
-Enumeration_ZF
-Quasigroup_ZF
-Loop_ZF
-Semigroup_ZF
-CommutativeSemigroup_ZF
-Monoid_ZF
-Group_ZF
-Group_ZF_1
-Group_ZF_1b
-AbelianGroup_ZF
-Group_ZF_2
-Group_ZF_3
-OrderedGroup_ZF
-OrderedGroup_ZF_1
-DirectProduct_ZF
-Ring_ZF
-Ring_ZF_1
-OrderedRing_ZF
-Field_ZF
-OrderedField_ZF
-FinSupp_ZF
-Int_ZF_IML
-Int_ZF_1
-IntDiv_ZF_IML
-Int_ZF_2
-Int_ZF_3
-Real_ZF
-Real_ZF_1
-Complex_ZF
-Topology_ZF
-Topology_ZF_1
-Topology_ZF_1b
-Topology_ZF_2
-Topology_ZF_3
-Topology_ZF_4
-Topology_ZF_4a
-Topology_ZF_6
-Topology_ZF_examples
-MetricSpace_ZF
-Real_ZF_2
-UniformSpace_ZF
-UniformSpace_ZF_1
-TopologicalGroup_ZF
-TopologicalGroup_Uniformity_ZF
-MMI_prelude
-Metamath_Interface
-Metamath_Sampler
+OrderedLoop_ZF
