added UniformSpace_ZF_2 theory

--- a/isar2html/theories.conf
+++ b/isar2html/theories.conf
@@ -63,6 +63,7 @@ MetricSpace_ZF
 Real_ZF_2
 UniformSpace_ZF
 UniformSpace_ZF_1
+UniformSpace_ZF_2
 TopologicalGroup_ZF
 TopologicalGroup_Uniformity_ZF
 MMI_prelude
