added F# rewrite of isar2html

--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,8 @@ isar2html/ih
 # vscode
 .vscode
 isar2html2.0/.vscode
-isar2html2.0/*/bin
-isar2html2.0/*/obj
+isar2html2.0/*/*/bin
+isar2html2.0/*/*/obj
 
 #intellij
 .idea
