started implementing html generation

--- a/isar2html2.0/src/isar2html/isar2html.fsproj
+++ b/isar2html2.0/src/isar2html/isar2html.fsproj
@@ -4,6 +4,9 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Utils.fs" />
+    <Compile Include="IsarSym2Latex.fs" />
+    <Compile Include="Export2Html.fs" />
     <Compile Include="IMLP_datatypes.fs" />
     <Compile Include="ProcessThys.fs" />
     <Compile Include="IMLP_datatypes.fs" />
