--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,21 @@ isar2html/dist/
 
 # generated part of isarmathlib site
 isar2html/isarhtml/*.html
+isar2html2.0/isarhtml/*.html
+
 #except the index file
 !isar2html/isarhtml/index.html
+!isar2html2.0/isarhtml/index.html
+
+# build artifacts produced by .net
+isar2html2.0/src/isar2html/bin
+isar2html2.0/test/isar2htmlTest/bin
+
 
 # handy link to isar2html executable
 isar2html/ih
+isar2html2.0/ih
+
 
 # vscode
 .vscode
