added a theory about the usual (real-valued) metric spaces

--- a/isar2html2.0/theories.conf
+++ b/isar2html2.0/theories.conf
@@ -64,6 +64,7 @@ Topology_ZF_6
 Topology_ZF_examples
 MetricSpace_ZF
 Real_ZF_2
+MetricSpace_ZF_1
 UniformSpace_ZF
 UniformSpace_ZF_1
 UniformSpace_ZF_2
