fixed parsing Ring_ZF_3

--- a/isar2html2.0/theories.conf
+++ b/isar2html2.0/theories.conf
@@ -40,9 +40,11 @@ DirectProduct_ZF
 Ring_ZF
 Ring_Binomial_ZF
 Ring_ZF_1
+Ring_ZF_2
 OrderedRing_ZF
 Group_ZF_4
 Group_ZF_5
+Ring_ZF_3
 Field_ZF
 OrderedField_ZF
 FinSupp_ZF
