started uniformity defined by a collection of pseudometrics

--- a/isar2html2.0/theories.conf
+++ b/isar2html2.0/theories.conf
@@ -76,6 +76,7 @@ UniformSpace_ZF_1
 UniformSpace_ZF_2
 MetricSpace_ZF
 MetricSpace_ZF_1
+MetricUniform_ZF
 TopologicalGroup_ZF
 TopologicalGroup_Uniformity_ZF
 MMI_prelude
