added a small theory on Tarski's axiom

--- a/isar2html2.0/theories.conf
+++ b/isar2html2.0/theories.conf
@@ -79,6 +79,7 @@ MetricSpace_ZF_1
 MetricUniform_ZF
 TopologicalGroup_ZF
 TopologicalGroup_Uniformity_ZF
+Tarski_ZF
 MMI_prelude
 Metamath_Interface
 Metamath_Sampler
