refactored to separate UniformLattice_ZF

--- a/isar2html2.0/theories.conf
+++ b/isar2html2.0/theories.conf
@@ -74,6 +74,7 @@ Real_ZF_2
 UniformSpace_ZF
 UniformSpace_ZF_1
 UniformSpace_ZF_2
+UniformityLattice_ZF
 MetricSpace_ZF
 MetricSpace_ZF_1
 MetricUniform_ZF
